fixed issue with group title overlapping buttons

--- a/components/com_groups/assets/css/groups.css
+++ b/components/com_groups/assets/css/groups.css
@@ -1606,3 +1606,6 @@ p.warning {
 .com_groups .innerwrap {
 	position: relative;
 }
+.com_groups #content-header {
+	padding-right: 180px;
+}
